--- a/views/base.ejs
+++ b/views/base.ejs
@@ -6,14 +6,14 @@
                     Login System
                 </h2>
             </div>
-            <form action="#">
+            <form action="/route/login" method="POST">
                 <div class="form-group pb-3">
                     <input type="email" class="form-control" placeholder="email" name="email">
                 </div>
                 <div class="form-group pb-3">
                     <input type="password" class="form-control" placeholder="password" name="password">
                 </div>
-                <button></button>
+                <button type="submit" class="btn btn-success">Login</button>
             </form>
         </div>
     </div>
